--- a/home.html
+++ b/home.html
@@ -45,7 +45,7 @@ a {
 
   <div class="w3-panel">
     <h1><b>Metro Manila Pozo Negro</b></h1>
-    <p>Sherwin Guerrero</p>
+    <p>Open 24 hours</p>
   </div>
 
   <!-- Slideshow -->
